* @license http://www.gnu.org/copyleft/gpl-3.0.html GNU/GPL
* FrontAccounting is Free Software
*/

1. Changelog
------------
This is a changelog for FrontAccounting All releases.

2013-09-03 Janusz	Customer Payment: fixed missing charge amount during edition, fixed submit button
2013-09-02 Joe   	Bug no 2409 and 2410. Fixed headers and sql error when deleting a category.
2013-08-26 Janusz	Fixed problem with customer payment allocations (invalid exrate stored in debtor_trans
2013-08-17 Janusz	Bank Transfer: fixed problem with entering transfer
2013-08-15 Janusz	Added F4 hotkey for item popup editor in sales documents.
2013-08-15 Joe   	Customer/Supplier payments with amounts bigger than...

2013-08-01 12:23 +0200 Joe
(3284) Release 2.3.17
 version.php

2013-07-30 13:05 +0200 Janusz Dobrowolski
(3283) Change password: added current password verification.
 admin/change_current_user_password.php

2013-07-30 12:57 +0200 Janusz Dobrowolski
(3282) Fixed CSRF warning after retrying password change.
 includes/ui/ui_controls.inc

2013-06-23 21:22 +0100 Maxime Bourget
(3281) Added get_dispatchable_quantity hook.
 includes/hooks.inc
 includes/ui/ui_controls.inc
 sales/customer_delivery.php

2013-06-23 21:14 +0100 Maxime Bourget
(3280) Updating sales order use UPDATE instead of DELETE/INSERT to preserve extra data added by extensions (if any)
 sales/includes/db/sales_order_db.inc

2013-06-23 21:13 +0100 Maxime Bourget
(3279) Added missing db_write_hook in update sales order.
 sales/includes/db/sales_order_db.inc

2013-06-23 21:02 +0100 Maxime Bourget
(3278) Improved db_pager widget sorting (now user column selection order is used).
 includes/db_pager.inc

2013-06-23 20:58 +0100 Maxime Bourget
(3277) Improved db_pager::set_sql to use array as well as query string.
 includes/db_pager.inc

2013-06-23 20:54 +0100 Maxime Bourget
(3276) Fixed qoh to return 0 instead of null when moves history is empty.
 includes/db/inventory_db.inc

2013-06-27 23:22 +0200 Joe
(3275) Touch by mistake